tdf#100342 fix order of weekdays in NETWORKDAYS

For the definition of working/weekend days, ODFF1.2 uses 0..6
for Sunday..Saturday. NETWORKDAYS used ISO ordering (Monday..Sunday),
but now complies with ODFF1.2.

Change-Id: I169433adfac5d66af979181c328658040d7ab77f